[gd_scene load_steps=19 format=3 uid="uid://d0y1m0thbe1eq"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_6f851"]
[ext_resource type="Texture2D" uid="uid://cw208ilamgq5x" path="res://graphics/characters.png" id="1_j8jpu"]
[ext_resource type="Script" path="res://Scripts/States/StateMachine.gd" id="3_hrfrk"]
[ext_resource type="Script" path="res://scenes/player/States/PlayerIdle.gd" id="4_x6fxf"]
[ext_resource type="Script" path="res://scenes/player/States/PlayerMove.gd" id="5_p66q7"]
[ext_resource type="Script" path="res://scenes/player/States/PlayerJump.gd" id="6_lj80i"]
[ext_resource type="Script" path="res://scenes/player/States/PlayerFall.gd" id="7_iqblj"]
[ext_resource type="Script" path="res://scenes/player/States/PlayerSpell.gd" id="8_e8gqe"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_205l0"]
size = Vector2(12, 17)

[sub_resource type="Animation" id="Animation_p3d3y"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_mnwkc"]
resource_name = "fall"
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [6, 7]
}

[sub_resource type="Animation" id="Animation_b6vyk"]
resource_name = "hit"
length = 0.75
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [8, 9, 8]
}

[sub_resource type="Animation" id="Animation_npjqh"]
resource_name = "idle"
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 4]
}

[sub_resource type="Animation" id="Animation_q4wiv"]
resource_name = "jump"
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [4, 5]
}

[sub_resource type="Animation" id="Animation_gbiru"]
resource_name = "run"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [14, 15, 16, 17]
}

[sub_resource type="Animation" id="Animation_nd4j4"]
resource_name = "spell"
length = 0.5
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [13, 11]
}

[sub_resource type="Animation" id="Animation_ac8nv"]
resource_name = "walk"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fusxw"]
_data = {
"RESET": SubResource("Animation_p3d3y"),
"fall": SubResource("Animation_mnwkc"),
"hit": SubResource("Animation_b6vyk"),
"idle": SubResource("Animation_npjqh"),
"jump": SubResource("Animation_q4wiv"),
"run": SubResource("Animation_gbiru"),
"spell": SubResource("Animation_nd4j4"),
"walk": SubResource("Animation_ac8nv")
}

[node name="Player" type="CharacterBody2D"]
collision_mask = 15
script = ExtResource("1_6f851")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_205l0")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-1, -2)
texture = ExtResource("1_j8jpu")
hframes = 23
region_enabled = true
region_rect = Rect2(-0.42432, 38.7249, 736.302, 29.5416)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fusxw")
}

[node name="SpellStartPosition" type="Marker2D" parent="."]
position = Vector2(23, -2)

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("3_hrfrk")

[node name="PlayerIdle" type="Node" parent="StateMachine"]
script = ExtResource("4_x6fxf")

[node name="PlayerMove" type="Node" parent="StateMachine"]
script = ExtResource("5_p66q7")

[node name="PlayerJump" type="Node" parent="StateMachine"]
script = ExtResource("6_lj80i")

[node name="PlayerFall" type="Node" parent="StateMachine"]
script = ExtResource("7_iqblj")

[node name="PlayerSpell" type="Node" parent="StateMachine"]
script = ExtResource("8_e8gqe")

[connection signal="animation_finished" from="AnimationPlayer" to="StateMachine/PlayerSpell" method="_on_animation_player_animation_finished"]
